# lazyq

./: .gitignore  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
lazyq/: __init__.py  _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
site_libs/bootstrap/: bootstrap-6d84d61e534591fe48c07f685081cc6d.min.css
